--- a/rs-lib/Cargo.toml
+++ b/rs-lib/Cargo.toml
@@ -13,6 +13,9 @@ lto = true
 opt-level = "z"
 
 [dependencies]
+anyhow = "1.0.57"
+js-sys = { version = "0.3.55" }
+serde = { version = "1.0.130", features = ["derive", "rc"] }
+wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
 wasm-bindgen-cli-support = "0.2.80"
 walrus = "0.19.0"
-anyhow = "1.0.57"
