--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [workspace]
 members = [
   "rs-lib",
-  "tests",
 ]
+
+# temporarily excluded to enable using a git dependency
+# for wasm-bindgen in rs-lib
+exclude = ["tests"]
