--- a/deno.jsonc
+++ b/deno.jsonc
@@ -11,6 +11,6 @@
     "fmt": "deno fmt && cargo fmt",
     "build": "deno run -A --unstable ./main.ts -p wasmbuild",
     "build:lkg": "deno run -A --unstable https://deno.land/x/wasmbuild@0.5.0/main.ts -p wasmbuild",
-    "test": "cd tests && deno run --unstable -A ../main.ts -p deno_test && deno run --unstable -A ../main.ts -p deno_test --sync --out lib_sync && deno test -A"
+    "test": "cd tests && deno run --unstable -A ../main.ts -p deno_test && deno run --unstable -A ../main.ts -p deno_test --sync --out lib_sync && deno test -A && deno run --unstable -A ../main.ts -p deno_test --check"
   }
 }
