Add CI step to ensure the wasmbuild output is up to date.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,3 +50,6 @@ jobs:
 
       - name: Test
         run: deno task test
+
+      - name: Ensure wasm output up to date
+        run: deno task build --check
