--- a/deno.jsonc
+++ b/deno.jsonc
@@ -11,10 +11,10 @@
     "fmt": "deno fmt && cargo fmt",
     "build": "deno run -A --unstable ./main.ts -p wasmbuild",
     "build:lkg": "deno run -A --unstable https://deno.land/x/wasmbuild@0.5.0/main.ts -p wasmbuild",
-    "test": "cd tests && deno task test:main && deno task test:sync && deno task test:out-js-file && deno test -A && deno task test:check",
+    "test": "cd tests && deno task test:main && deno task test:sync && deno task test:js-ext && deno test -A && deno task test:check",
     "test:main": "cd tests && deno run --unstable -A ../main.ts -p deno_test",
     "test:sync": "deno task test:main --sync --out lib_sync",
-    "test:out-js-file": "rm -rf tests/lib_out_js_file && deno task test:main --out-js-ext mjs --out lib_out_js_file && cat tests/lib_out_js_file/deno_test.generated.mjs > /dev/null",
+    "test:js-ext": "rm -rf tests/lib_out_js_file && deno task test:main --js-ext mjs --out lib_out_js_file && cat tests/lib_out_js_file/deno_test.generated.mjs > /dev/null",
     "test:check": "deno task test:main --check"
   }
 }
