--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [macOS-latest, ubuntu-latest, windows-2019]
 
     env:
       GH_ACTIONS: 1
