--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,14 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Rust
-        uses: hecrj/setup-rust-action@v1.3.4
-        with:
-          rust-version: 1.58.0
-
-      - name: Install clippy and rustfmt
-        run: |
-          rustup component add clippy
-          rustup component add rustfmt
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Setup rust-cache
         uses: Swatinem/rust-cache@v1
@@ -40,9 +33,8 @@ jobs:
           deno-version: 1.x
 
       - name: Check fmt
-        run: |
-          deno fmt --check
-          cargo fmt -- --check
+        if: contains(matrix.os, 'ubuntu')
+        run: deno fmt --check && cargo fmt -- --check
 
       - name: Test
         run: deno task test
