--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["the Deno authors"]
 license = "MIT"
 
 [dependencies]
-wasm-bindgen = { git = "https://github.com/dsherret/wasm-bindgen", branch = "add_back_types_getters_setters" }
+wasm-bindgen = "0.2.83"
 
 [lib]
 name = "deno_test"
