--- a/deno.jsonc
+++ b/deno.jsonc
@@ -9,8 +9,9 @@
   },
   "tasks": {
     "fmt": "deno fmt && cargo fmt",
-    "build": "WASMBUILD_SELF_BUILD=1 deno run -A ./main.ts -p wasmbuild",
-    "build:lkg": "deno run -A https://deno.land/x/wasmbuild@0.6.1/main.ts -p wasmbuild",
+    "build": "deno run -A ./main.ts -p wasmbuild",
+    "build:bindgen-upgrade": "WASMBUILD_BINDGEN_UPGRADE=1 deno task build",
+    "build:lkg": "deno run -A https://deno.land/x/wasmbuild@0.8.5/main.ts -p wasmbuild",
     "test": "cd tests && deno task test:main && deno task test:sync && deno task test:js-ext && deno test -A && deno task test:check",
     "test:main": "cd tests && deno run -A ../main.ts -p deno_test",
     "test:sync": "deno task test:main --sync --out lib_sync",
