--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dsherret/rust-toolchain-file@v1
 
       - name: Setup rust-cache
         uses: Swatinem/rust-cache@v1
