--- a/deno.jsonc
+++ b/deno.jsonc
@@ -14,7 +14,7 @@
     "build:lkg": "deno run -A https://deno.land/x/wasmbuild@0.8.5/main.ts -p wasmbuild",
     "test": "cd tests && deno task test:main && deno task test:sync && deno task test:js-ext && deno test -A && deno task test:check",
     "test:main": "cd tests && deno run -A ../main.ts -p deno_test",
-    "test:sync": "deno task test:main --sync --out lib_sync",
+    "test:sync": "rm -rf tests/lib_sync && deno task test:main --sync --out lib_sync",
     "test:js-ext": "rm -rf tests/lib_out_js_file && deno task test:main --js-ext mjs --out lib_out_js_file && cat tests/lib_out_js_file/deno_test.generated.mjs > /dev/null",
     "test:check": "deno task test:main --check && deno task test:sync --check"
   }
