--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,7 @@ jobs:
 
       - name: Check Wasm up-to-date
         run: deno task build --check
+
+      - name: Check that the generated bindings are uptodate
+        if: contains(matrix.os, 'ubuntu')
+        run: deno task check
