Start of making it work again in the browser

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,6 +3,9 @@
     "./tests/target",
     "./target"
   ],
+  "compilerOptions": {
+    "checkJs": true
+  },
   "tasks": {
     "fmt": "deno fmt && cargo fmt",
     "build": "deno run -A ./main.ts -p wasmbuild",
