--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,4 +1,7 @@
 {
+  "name": "@deno/wasmbuild",
+  "version": "0.15.3",
+  "exports": "./main.ts",
   "exclude": [
     "./tests/target",
     "./target"
@@ -10,7 +13,7 @@
     "fmt": "deno fmt && cargo fmt",
     "build": "deno run -A ./main.ts -p wasmbuild",
     "build:bindgen-upgrade": "WASMBUILD_BINDGEN_UPGRADE=1 deno task build",
-    "build:lkg": "deno run -A https://deno.land/x/wasmbuild@0.15.2/main.ts -p wasmbuild",
+    "build:lkg": "deno run -A https://deno.land/x/wasmbuild@0.15.3/main.ts -p wasmbuild",
     "test": "cd tests && rm -rf lib lib_out_js_file lib_sync lib_no_cache && deno task test:main && deno task test:no-cache && deno task test:sync && deno task test:js-ext && deno test -A && deno task test:check",
     "test:main": "cd tests && deno run -A ../main.ts -p deno_test",
     "test:sync": "deno task test:main --sync --out lib_sync",
