--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,24 +1,48 @@
 {
   "name": "@deno/wasmbuild",
-  "version": "0.15.3",
+  "version": "0.15.4",
   "exports": "./main.ts",
   "exclude": [
     "./tests/target",
     "./target"
   ],
+  "publish": {
+    "exclude": [
+      "**/*_test.ts",
+      "tests/",
+      "rs_lib/",
+      "**/*.toml",
+      "**/*.lock"
+    ]
+  },
   "compilerOptions": {
     "checkJs": true
   },
   "tasks": {
     "fmt": "deno fmt && cargo fmt",
-    "build": "deno run -A ./main.ts -p wasmbuild",
+    "build": "deno task build:loader && deno run -A ./main.ts -p wasmbuild",
     "build:bindgen-upgrade": "WASMBUILD_BINDGEN_UPGRADE=1 deno task build",
-    "build:lkg": "deno run -A https://deno.land/x/wasmbuild@0.15.3/main.ts -p wasmbuild",
+    "build:lkg": "deno run -A https://deno.land/x/wasmbuild@0.15.6/main.ts -p wasmbuild",
+    "build:loader": "deno run -A scripts/build_loader_text.ts",
     "test": "cd tests && rm -rf lib lib_out_js_file lib_sync lib_no_cache && deno task test:main && deno task test:no-cache && deno task test:sync && deno task test:js-ext && deno test -A && deno task test:check",
     "test:main": "cd tests && deno run -A ../main.ts -p deno_test",
     "test:sync": "deno task test:main --sync --out lib_sync",
     "test:no-cache": "deno task test:main --no-cache --out lib_no_cache",
     "test:js-ext": "deno task test:main --js-ext mjs --out lib_out_js_file && cat tests/lib_out_js_file/deno_test.generated.mjs > /dev/null",
     "test:check": "deno task test:main --check && deno task test:sync --check"
+  },
+  "imports": {
+    "@david/dax": "jsr:@david/dax@^0.39.2",
+    "@std/archive": "jsr:@std/archive@^0.218.2",
+    "@std/assert": "jsr:@std/assert@^0.218.2",
+    "@std/cli": "jsr:@std/cli@^0.218.2",
+    "@std/encoding": "jsr:@std/encoding@^0.218.2",
+    "@std/fmt": "jsr:@std/fmt@^0.218.2",
+    "@std/fs": "jsr:@std/fs@^0.218.2",
+    "@std/io": "jsr:@std/io@^0.218.2",
+    "@std/path": "jsr:@std/path@^0.218.2",
+    "@std/streams": "jsr:@std/streams@^0.218.2",
+    "code-block-writer": "npm:code-block-writer@^13.0.1",
+    "ts-morph": "npm:ts-morph@^21"
   }
 }
