--- a/deno.jsonc
+++ b/deno.jsonc
@@ -22,7 +22,7 @@
     "fmt": "deno fmt && cargo fmt",
     "build": "deno task build:loader && deno run -A ./main.ts -p wasmbuild",
     "build:bindgen-upgrade": "WASMBUILD_BINDGEN_UPGRADE=1 deno task build",
-    "build:lkg": "deno run -A https://deno.land/x/wasmbuild@0.15.6/main.ts -p wasmbuild",
+    "build:lkg": "deno run -A jsr:@deno/wasmbuild@^0.15.4 -p wasmbuild",
     "build:loader": "deno run -A scripts/build_loader_text.ts",
     "test": "cd tests && rm -rf lib lib_out_js_file lib_sync lib_no_cache && deno task test:main && deno task test:no-cache && deno task test:sync && deno task test:js-ext && deno test -A && deno task test:check",
     "test:main": "cd tests && deno run -A ../main.ts -p deno_test",
