--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - name: clone repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install Rust
         uses: dsherret/rust-toolchain-file@v1
@@ -37,8 +37,23 @@ jobs:
         if: contains(matrix.os, 'ubuntu')
         run: deno fmt --check && cargo fmt -- --check
 
+      - name: Check lint
+        if: contains(matrix.os, 'ubuntu')
+        run: deno lint && cargo clippy
+
       - name: Check Wasm up-to-date
         run: deno task build --check
 
       - name: Test
         run: deno task test
+
+      - name: Get tag version
+        if: contains(matrix.os, 'ubuntu') && startsWith(github.ref, 'refs/tags/')
+        id: get_tag_version
+        run: echo TAG_VERSION=${GITHUB_REF/refs\/tags\//} >> "$GITHUB_OUTPUT"
+
+      - name: Publish
+        if: contains(matrix.os, 'ubuntu') && startsWith(github.ref, 'refs/tags/')
+        run: |
+          deno run -A ./scripts/update_deno_json_version.ts ${{steps.get_tag_version.outputs.TAG_VERSION}}
+          deno publish
