refactor: use `@std/tar` in `build` task

--- a/deno.json
+++ b/deno.json
@@ -39,9 +39,8 @@
     "@std/encoding": "jsr:@std/encoding@^0.218.2",
     "@std/fmt": "jsr:@std/fmt@^0.218.2",
     "@std/fs": "jsr:@std/fs@^0.218.2",
-    "@std/io": "jsr:@std/io@^0.218.2",
     "@std/path": "jsr:@std/path@^0.218.2",
-    "@std/streams": "jsr:@std/streams@^0.218.2",
+    "@std/tar": "jsr:@std/tar@^0.1.1",
     "code-block-writer": "npm:code-block-writer@^13.0.1",
     "ts-morph": "npm:ts-morph@^21"
   }
