--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           save-if: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Install deno
-      - uses: denoland/setup-deno@v2
+        uses: denoland/setup-deno@v2
         with:
           deno-version: v2.x
 
