--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
 # exclude these from the language stats
-lib/wasmbuild.generated.js linguist-vendored
-tests/lib/deno_test.generated.js linguist-vendored
-tests/lib_sync/deno_test.generated.js linguist-vendored
+lib/wasmbuild_bg.js linguist-vendored
