--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,5 @@
 {
   "name": "@deno/wasmbuild",
-  "version": "0.0.0",
   "exports": "./main.ts",
   "exclude": [
     "./tests/target",
@@ -20,19 +19,17 @@
   },
   "tasks": {
     "fmt": "deno fmt && cargo fmt",
-    "build": "deno task build:loader && deno run -A ./main.ts -p wasmbuild",
+    "build": "deno run -A ./main.ts -p wasmbuild",
     "build:bindgen-upgrade": "WASMBUILD_BINDGEN_UPGRADE=1 deno task build",
     "build:lkg": "deno run -A jsr:@deno/wasmbuild@^0.15.4 -p wasmbuild",
-    "build:loader": "deno run -A scripts/build_loader_text.ts",
-    "test": "cd tests && rm -rf lib lib_out_js_file lib_sync lib_no_cache && deno task test:main && deno task test:no-cache && deno task test:sync && deno task test:js-ext && deno test -A && deno task test:check",
+    "test": "cd tests && rm -rf lib lib_out_js_file lib_sync lib_no_cache && deno task test:main && deno task test:js-ext && deno test -A && deno task test:check",
     "test:main": "cd tests && deno run -A ../main.ts -p deno_test",
-    "test:sync": "deno task test:main --sync --out lib_sync",
-    "test:no-cache": "deno task test:main --no-cache --out lib_no_cache",
-    "test:js-ext": "deno task test:main --js-ext mjs --out lib_out_js_file && cat tests/lib_out_js_file/deno_test.generated.mjs > /dev/null",
-    "test:check": "deno task test:main --check && deno task test:sync --check"
+    "test:js-ext": "deno task test:main --js-ext mjs --out lib_out_js_file && cat tests/lib_out_js_file/deno_test.mjs > /dev/null",
+    "test:check": "deno task test:main --check"
   },
   "imports": {
     "@david/dax": "jsr:@david/dax@^0.39.2",
+    "@david/temp": "jsr:@david/temp@^0.1.1",
     "@std/assert": "jsr:@std/assert@^0.218.2",
     "@std/cli": "jsr:@std/cli@^0.218.2",
     "@std/encoding": "jsr:@std/encoding@^0.218.2",
@@ -40,8 +37,6 @@
     "@std/fs": "jsr:@std/fs@^0.218.2",
     "@std/path": "jsr:@std/path@^0.218.2",
     "@std/streams": "jsr:@std/streams@^1.0.6",
-    "@std/tar": "jsr:@std/tar@^0.1.2",
-    "code-block-writer": "npm:code-block-writer@^13.0.1",
-    "ts-morph": "npm:ts-morph@^21"
+    "@std/tar": "jsr:@std/tar@^0.1.2"
   }
 }
