--- a/deno.json
+++ b/deno.json
@@ -29,6 +29,7 @@
     "test:inline": "deno task test:main --inline --out lib_inline"
   },
   "imports": {
+    "@david/path": "jsr:@david/path@^0.2.0",
     "@david/temp": "jsr:@david/temp@^0.1.1",
     "@std/assert": "jsr:@std/assert@^1.0.11",
     "@std/cli": "jsr:@std/cli@^1.0.11",
