--- a/deno.json
+++ b/deno.json
@@ -22,21 +22,22 @@
     "build": "deno run -A ./main.ts -p wasmbuild",
     "build:bindgen-upgrade": "WASMBUILD_BINDGEN_UPGRADE=1 deno task build",
     "build:lkg": "deno run -A jsr:@deno/wasmbuild@^0.15.4 -p wasmbuild",
-    "test": "cd tests && rm -rf lib lib_out_js_file lib_sync lib_no_cache && deno task test:main && deno task test:js-ext && deno test -A && deno task test:check",
+    "test": "cd tests && rm -rf lib lib_out_js_file lib_inline lib_no_cache && deno task test:main && deno task test:js-ext && deno task test:inline && deno test -A && deno task test:check",
     "test:main": "cd tests && deno run -A ../main.ts -p deno_test",
     "test:js-ext": "deno task test:main --js-ext mjs --out lib_out_js_file && cat tests/lib_out_js_file/deno_test.mjs > /dev/null",
-    "test:check": "deno task test:main --check"
+    "test:check": "deno task test:main --check",
+    "test:inline": "deno task test:main --inline --out lib_inline"
   },
   "imports": {
-    "@david/dax": "jsr:@david/dax@^0.39.2",
+    "@david/path": "jsr:@david/path@^0.2.0",
     "@david/temp": "jsr:@david/temp@^0.1.1",
-    "@std/assert": "jsr:@std/assert@^0.218.2",
-    "@std/cli": "jsr:@std/cli@^0.218.2",
-    "@std/encoding": "jsr:@std/encoding@^0.218.2",
-    "@std/fmt": "jsr:@std/fmt@^0.218.2",
-    "@std/fs": "jsr:@std/fs@^0.218.2",
-    "@std/path": "jsr:@std/path@^0.218.2",
-    "@std/streams": "jsr:@std/streams@^1.0.6",
-    "@std/tar": "jsr:@std/tar@^0.1.2"
+    "@std/assert": "jsr:@std/assert@^1.0.11",
+    "@std/cli": "jsr:@std/cli@^1.0.11",
+    "@std/encoding": "jsr:@std/encoding@^1.0.6",
+    "@std/fmt": "jsr:@std/fmt@^1.0.4",
+    "@std/fs": "jsr:@std/fs@^1.0.10",
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "@std/streams": "jsr:@std/streams@^1.0.8",
+    "@std/tar": "jsr:@std/tar@^0.1.4"
   }
 }
