--- a/deno.json
+++ b/deno.json
@@ -19,8 +19,7 @@
   },
   "tasks": {
     "fmt": "deno fmt && cargo fmt",
-    "build": "deno run -A ./main.ts -p wasmbuild",
-    "build:bindgen-upgrade": "WASMBUILD_BINDGEN_UPGRADE=1 deno task build",
+    "build": "WASMBUILD_BINDGEN_UPGRADE=1 deno run -A ./main.ts -p wasmbuild",
     "build:lkg": "deno run -A jsr:@deno/wasmbuild@^0.15.4 -p wasmbuild",
     "test": "cd tests && rm -rf lib lib_out_js_file lib_inline lib_no_cache && deno task test:main && deno task test:js-ext && deno task test:inline && deno test -A && deno task test:check && deno task test:start",
     "test:main": "cd tests && deno run -A ../main.ts -p deno_test",
