--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
         if: contains(matrix.os, 'ubuntu')
         run: deno lint && cargo clippy
 
+      - name: Install wasm-bindgen-cli
+        run: cargo install wasm-bindgen-cli --version 0.2.100 --locked
+
       - name: Check Wasm up-to-date
         run: deno task build --check
 
